--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "autoslot",
+  "name": "freeslot",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
@@ -21,7 +21,9 @@
     "include-all": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.14",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mysql": "^0.11.5",
+    "sails-postgresql": "^0.11.4"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -33,5 +35,6 @@
     "url": "git://github.com/anonymous node/sails user/autoslot.git"
   },
   "author": "anonymous node/sails user",
-  "license": ""
+  "license": "ISC",
+  "devDependencies": {}
 }
