--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "freeslot",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "ejs": "2.3.4",
+    "ejs": "^2.5.7",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
@@ -19,6 +19,7 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "npm": "^5.7.1",
     "rc": "1.0.1",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
